--- a/template/base.html.twig
+++ b/template/base.html.twig
@@ -6,11 +6,15 @@
         <meta name="description" content="">
          <meta name="author" content="">
         <title>Ma Blog by LudGold</title>
+        
     </head>
     <body>
     {% block body %} {% endblock %}
         <h1>Ma page web</h1>
-        <p>Aujourd'hui nous sommes le </p>
+        <p>Aujourd'hui nous sommes le 
+        </p>
+        
     </body>
 </html>
+
 
