test post / templates on working with router and controller

--- a/template/home/home.html.twig
+++ b/template/home/home.html.twig
@@ -1,5 +1,12 @@
 {% extends 'base.html.twig' %}
 {% block body %}
-<p>html code </p>
+<form action="/" method="post">
+<input name="title" id="title" type="text">
+<button type="submit">
+envoyer 
+</button>
+
+</form>
+
 
  {% endblock %}
