--- a/template/base.html.twig
+++ b/template/base.html.twig
@@ -1,20 +1,106 @@
 <!DOCTYPE html>
 <html>
-    <head>
-        <meta charset="utf-8" />
-        <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-        <meta name="description" content="">
-         <meta name="author" content="">
-        <title>Ma Blog by LudGold</title>
-        
-    </head>
-    <body>
-    {% block body %} {% endblock %}
-        <h1>Ma page web</h1>
-        <p>Aujourd'hui nous sommes le 
-        </p>
-        
-    </body>
+	<head>
+		<meta charset="utf-8"/>
+		<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+		<meta name="description" content="">
+		<meta name="author" content="">
+		<title>Ma Blog by LudGold</title>
+
+	</head>
+	<body>
+		{% block body %}{% endblock %}
+		<div class="navbar" id="navbar">
+			<ul class="navbar-nav text-uppercase">
+				<li class="nav-item">
+					<a class="nav-link " href="#home">Accueil</a>
+				</li>
+				<li class="nav-item">
+					<a class="nav-link " href="#about">Qui suis-je?</a>
+				</li>
+				<li class="nav-item">
+					<a class="nav-link " href="#cv">Parcours</a>
+
+				</li>
+				<li class="nav-item">
+					<a class="nav-link " href="#portfolio">Réalisations</a>
+				</li>
+				<li class="nav-item">
+					<a class="nav-link " href="#articles">Articles</a>
+					<ul class="edit-articles">
+						<li>
+							<a href="#add-article">Ajouter un article</a>
+						</li>
+						<li>
+							<a href="#comments-article">Commenter l'article</a>
+						</li>
+
+					</ul>
+				</li>
+				<li class="nav-item">
+					<a class="nav-link" href="#rs">Me contacter</a>
+				</li>
+				<li class="nav-item">
+					<a class="nav-link " href="/user/login">Connexion</a>
+
+				</li>
+				<li>
+					<a class="nav-link " href="/user/signin">S'inscrire</a>
+				</li>
+			</ul>
+		</div>
+
+		<main>
+			<h1>Ma page web</h1>
+			<p>Aujourd'hui nous sommes le
+			</p>
+		</main>
+
+		<footer>
+			<div class="footer-content">
+				<div class="social-icons">
+					<a href="#" class="social-icon">
+						<strong class="fab fa-facebook">facebook</strong>
+					</a>
+					<a href="#" class="social-icon">
+						<strong class="fab fa-x">twitter</strong>
+					</a>
+					<a href="#" class="social-icon">
+						<strong class="fab fa-linkedIn">linkedIn</strong>
+					</a>
+                    <a href="https://github.com/LudGold" target="_blank">
+              <strong class="fab fa-github">github</strong>
+            </a>
+
+				</div>
+
+				<ul class="footer-links">
+					<li>
+						<a href="#">Privacy Policy</a>
+					</li>
+					<li>
+						<a href="#">Legal Terms</a>
+					</li>
+					<li>
+						<a href="#">Credits</a>
+					</li>
+					<li>
+						<a href="#">Contact Me</a>
+					</li>
+
+				</ul>
+			</div>
+			<div class="footer-administration">
+				<li>
+					<a href="#">Admin</a>
+				</li>
+			</div>
+			<div class="footer-bottom">
+				<p>&copy;
+					<span id="current-year">2023</span>
+					LudGold. All Rights Reserved.</p>
+			</div>
+		</footer>
+	</body>
+
 </html>
-
-
