working on creation of objects

--- a/template/home/home.html.twig
+++ b/template/home/home.html.twig
@@ -1,12 +1,17 @@
 {% extends 'base.html.twig' %}
 {% block body %}
-<form action="/" method="post">
+
+ <form action="/" method="post">
 <input name="title" id="title" type="text">
 <button type="submit">
 envoyer 
 </button>
 
-</form>
+</form> 
 
 
- {% endblock %}
+</body>
+</html>
+
+
+{% endblock %}
