--- a/template/base.html.twig
+++ b/template/base.html.twig
@@ -5,13 +5,17 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 		<meta name="description" content="">
 		<meta name="author" content="">
-		<title>Ma Blog by LudGold</title>
+		<link rel="stylesheet" type="text/css" href="/css/style.css ">
 
 	</head>
+
 	<body>
-		{% block body %}{% endblock %}
+		<header>
+			<title>Ma Blog by LudGold</title>
+		</header>
+
 		<div class="navbar" id="navbar">
-			<ul class="navbar-nav text-uppercase">
+			<ul class="navbar-nav">
 				<li class="nav-item">
 					<a class="nav-link " href="#home">Accueil</a>
 				</li>
@@ -49,16 +53,20 @@
 				</li>
 			</ul>
 		</div>
-
 		<main>
 			<h1>Ma page web</h1>
 			<p>Aujourd'hui nous sommes le
 			</p>
 		</main>
+		{% block body %}{% endblock %}
+
 
 		<footer>
 			<div class="footer-content">
 				<div class="social-icons">
+				<li>
+						<a href="#">Contactez Moi</a>
+					</li>
 					<a href="#" class="social-icon">
 						<strong class="fab fa-facebook">facebook</strong>
 					</a>
@@ -68,37 +76,34 @@
 					<a href="#" class="social-icon">
 						<strong class="fab fa-linkedIn">linkedIn</strong>
 					</a>
-                    <a href="https://github.com/LudGold" target="_blank">
-              <strong class="fab fa-github">github</strong>
-            </a>
+					<a href="https://github.com/LudGold" target="_blank">
+						<strong class="fab fa-github">github</strong>
+					</a>
 
 				</div>
 
 				<ul class="footer-links">
 					<li>
-						<a href="#">Privacy Policy</a>
-					</li>
-					<li>
-						<a href="#">Legal Terms</a>
+						<a href="#">Politique de confidentialité</a>
 					</li>
 					<li>
 						<a href="#">Credits</a>
 					</li>
-					<li>
-						<a href="#">Contact Me</a>
-					</li>
+					
 
 				</ul>
 			</div>
-			<div class="footer-administration">
-				<li>
-					<a href="#">Admin</a>
-				</li>
-			</div>
+
 			<div class="footer-bottom">
 				<p>&copy;
 					<span id="current-year">2023</span>
 					LudGold. All Rights Reserved.</p>
+
+				<div class="footer-administration">
+					<li>
+						<a href="#">Mode Admin</a>
+					</li>
+				</div>
 			</div>
 		</footer>
 	</body>
