--- a/template/security/register.html.twig
+++ b/template/security/register.html.twig
@@ -7,14 +7,14 @@
 				<div class="register-image"></div>
 				<h1 class="h4">Créer un compte !</h1>
 			</div>
-			<form class="user" action="register" method="post">
+			<form class="user" action="/register" method="post">
 				<div class="last-name">
 					<input type="text" name="lastname" class="form-control form-control-user" id="last-name" placeholder="Nom" required>
 				</div>
 				<div class="first-name">
 					<input type="text" name="firstname" class="form-control form-control-user" id="first-name" placeholder="Prénom" required>
 				</div>
-				<div class="email">
+				<div class="mail">
 					<input type="email" name="mail" class="form-control form-control-user" id="mail" placeholder="email" required>
 				</div>
 			</div>
