fix new user connexion BDD and add rules of fields form

--- a/template/security/register.html.twig
+++ b/template/security/register.html.twig
@@ -22,7 +22,7 @@
 				<input type="password" name="password" class="form-control form-control-user" id="password" placeholder="Mot de passe" required>
 			</div>
 			<div class="rewrite-password">
-				<input type="password" name="password" class="form-control form-control-user" id="password-verify" placeholder="Confirmer mot de passe" required>
+				<input type="password" name="password_verify" class="form-control form-control-user" id="password-verify" placeholder="Confirmer mot de passe" required>
 			</div>
 			<button type="submit" name="submit" id="register" value="Créer un compte" class="btn btn-primary btn-user btn-block" onclick="notification.notify( 'success', 'Votre compte a été créé !' );">Créer un compte</button>
 		</form>
