--- a/template/base.html.twig
+++ b/template/base.html.twig
@@ -5,6 +5,7 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 		<meta name="description" content="">
 		<meta name="author" content="">
+
 		<link rel="stylesheet" type="text/css" href="/css/style.css ">
 
 	</head>
@@ -106,6 +107,7 @@
 				</div>
 			</div>
 		</footer>
+		<script src="../js/password.js"></script>
 	</body>
 
 </html>
