--- a/template/base.html.twig
+++ b/template/base.html.twig
@@ -5,7 +5,8 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 		<meta name="description" content="">
 		<meta name="author" content="">
-
+		<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css">
+		<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css">
 		<link rel="stylesheet" type="text/css" href="/css/style.css ">
 
 	</head>
@@ -17,20 +18,25 @@
 
 		<div class="navbar" id="navbar">
 			<ul class="navbar-nav">
-				<li class="nav-item">
+				<li class="nav-item blog-brand">
+					
+					<a class="nav-link " id="blog-name" href="#home">My Blog</a>
+					<img src="./img/blog-img.jpg" alt="Logo du blog" id="blog-logo">
+				</li>
+				<li class="nav-item accueil">
 					<a class="nav-link " href="#home">Accueil</a>
 				</li>
-				<li class="nav-item">
+				<li class="nav-item who">
 					<a class="nav-link " href="#about">Qui suis-je?</a>
 				</li>
-				<li class="nav-item">
+				<li class="nav-item parcours">
 					<a class="nav-link " href="#cv">Parcours</a>
 
 				</li>
-				<li class="nav-item">
+				<li class="nav-item realisations">
 					<a class="nav-link " href="#portfolio">Réalisations</a>
 				</li>
-				<li class="nav-item">
+				<li class="nav-item articles">
 					<a class="nav-link " href="#articles">Articles</a>
 					<ul class="edit-articles">
 						<li>
@@ -42,15 +48,15 @@
 
 					</ul>
 				</li>
-				<li class="nav-item">
+				<li class="nav-item contact">
 					<a class="nav-link" href="#rs">Me contacter</a>
 				</li>
-				<li class="nav-item">
+				<li class="nav-item connexion">
 					<a class="nav-link " href="/user/login">Connexion</a>
 
 				</li>
 				<li>
-					<a class="nav-link " href="/user/signin">S'inscrire</a>
+					<a class="nav-link sign-in " href="/user/signin">S'inscrire</a>
 				</li>
 			</ul>
 		</div>
@@ -65,32 +71,35 @@
 		<footer>
 			<div class="footer-content">
 				<div class="social-icons">
-				<li>
-						<a href="#">Contactez Moi</a>
+					<li>
+						<a href="ludivinezarkos@gmail.com">Contactez Moi</a>
+						
 					</li>
 					<a href="#" class="social-icon">
-						<strong class="fab fa-facebook">facebook</strong>
+						<i class="fas fa-solid fa-envelope"></i>
 					</a>
 					<a href="#" class="social-icon">
-						<strong class="fab fa-x">twitter</strong>
+						<i class="fab fa-facebook"></i>
 					</a>
 					<a href="#" class="social-icon">
-						<strong class="fab fa-linkedIn">linkedIn</strong>
+						<i class="fab fa-twitter"></i>
+					</a>
+					<a href="#" class="social-icon">
+						<i class="fab fa-linkedin"></i>
 					</a>
 					<a href="https://github.com/LudGold" target="_blank">
-						<strong class="fab fa-github">github</strong>
+						<i class="fab fa-github"></i>
 					</a>
 
 				</div>
 
 				<ul class="footer-links">
 					<li>
-						<a href="#">Politique de confidentialité</a>
+						<a href="#" class="confidential">Politique de confidentialité</a>
 					</li>
 					<li>
-						<a href="#">Credits</a>
+						<a href="#" class="credit">Credits</a>
 					</li>
-					
 
 				</ul>
 			</div>
@@ -102,12 +111,13 @@
 
 				<div class="footer-administration">
 					<li>
-						<a href="#">Mode Admin</a>
+						<a href="#">Admin</a>
 					</li>
 				</div>
 			</div>
 		</footer>
-		<script src="../js/password.js"></script>
+
+		{% block js %}{% endblock %}
 	</body>
 
 </html>
