--- a/template/security/register.html.twig
+++ b/template/security/register.html.twig
@@ -1,11 +1,16 @@
 {% extends 'base.html.twig' %}
+{% block js %}
+	{{parent()}}
+	<script src="../js/password.js"></script>
+{% endblock %}
 {% block body %}
+
 	<div class="card">
 		<div class="card-body">
 
 			<div class="row">
 				<div class="register-image"></div>
-				<h1 class="h4">Créer un compte !</h1>
+				<h1 class="h4">Envie de commenter? Inscris-toi</h1>
 			</div>
 			<form class="user" action="/register" method="post">
 				<div class="last-name">
@@ -22,11 +27,12 @@
 				<input type="password" name="password" class="form-control form-control-user" id="password" placeholder="Mot de passe" required>
 			</div>
 			<div class="rewrite-password">
-				<input type="password" name="password_verify" class="form-control form-control-user" id="password-verify" placeholder="Confirmer mot de passe" required>
+				<input type="password" name="checkpassword" class="form-control form-control-user" id="password-verify" placeholder="Confirmer mot de passe" required>
 			</div>
-			<button type="submit" name="submit" id="register" value="Créer un compte" class="btn btn-primary btn-user btn-block" onclick="notification.notify( 'success', 'Votre compte a été créé !' );">Créer un compte</button>
+			<button type="submit" name="submit" id="register" value="valider" class="btn btn-primary btn-user btn-block" onclick="notification.notify( 'success', 'Votre compte a été créé !' );">Créer un compte</button>
 		</form>
 		<hr>
+
 		<div class="alternative_txt">
 			<a class="small" href="/user/login">Vous avez déjà un compte ? Connectez-vous !</a>
 		</div>
