--- a/template/base.html.twig
+++ b/template/base.html.twig
@@ -24,7 +24,7 @@
 					<img src="./img/blog-img.jpg" alt="Logo du blog" id="blog-logo">
 				</li>
 				<li class="nav-item accueil">
-					<a class="nav-link " href="#home">Accueil</a>
+					<a class="nav-link " href="/">Accueil</a>
 				</li>
 				<li class="nav-item who">
 					<a class="nav-link " href="#about">Qui suis-je?</a>
@@ -56,15 +56,10 @@
 
 				</li>
 				<li>
-					<a class="nav-link sign-in " href="/user/signin">S'inscrire</a>
+					<a class="nav-link sign-in " href="/register">S'inscrire</a>
 				</li>
 			</ul>
 		</div>
-		<main>
-			<h1>Ma page web</h1>
-			<p>Aujourd'hui nous sommes le
-			</p>
-		</main>
 		{% block body %}{% endblock %}
 
 
