--- a/template/security/login.html.twig
+++ b/template/security/login.html.twig
@@ -1,32 +1,24 @@
 {% extends 'base.html.twig' %}
 
 {% block body %}
-
-	<!DOCTYPE html>
-	<html lang="en">
-		<head>
-			<meta charset="UTF-8">
-			<meta name="viewport" content="width=device-width, initial-scale=1.0">
-			<title>Connexion</title>
-			<link rel="stylesheet" href="styles.css">
-		</head>
-		<body>
-			<div id="login">
-				<h2>Connexion</h2>
-				<form action="/user/login" method="post">
-					<div class="form-group">
-						<label for="mail">votre adresse e-mail</label>
-						<input type="email" name="mail" id="mail" class="form-control" required>
-					</div>
-					<div class="form-group">
-						<label for="password">Mot de passe :</label>
-						<input type="password" name="password" id="password" class="form-control" required>
-					</div>
-					<button type="submit" name="submit" class="btn btn-primary btn-block">Se connecter</button>
-				</form>
-				<hr>
-				<div class="forgot-password">Mot de passe oublié?</div>
+{% for flash in session.flash %}
+{{flash.message}}
+{% endfor %}
+	<div id="login">
+		<h2>Connexion</h2>
+		<form action="/user/login" method="post">
+			<div class="form-group">
+				<label for="mail">votre adresse e-mail</label>
+				<input type="text" name="mail" id="mail" class="form-control" required>
 			</div>
-		</body>
-	</html>
+			<div class="form-group">
+				<label for="password">Mot de passe :</label>
+				<input type="password" name="password" id="password" class="form-control" required>
+			</div>
+			<button type="submit" name="submit" value="Se connecter" class="btn btn-primary btn-block">Se connecter</button>
+		</form>
+		<hr>
+		<div class="forgot-password">Mot de passe oublié?</div>
+	</div>
+
 {% endblock %}
