--- a/template/security/mailConfirmation.html.twig
+++ b/template/security/mailConfirmation.html.twig
@@ -1,8 +1,13 @@
-{# {% extends 'base.html.twig' %}
-
 {% block body %}
-<p>
-    Bienvenue sur notre site ! Pour confirmer votre inscription, veuillez cliquer sur le lien ci-dessous :
-{#     <a href={# "{{ path('confirmation', {'token': token}) }}" #}
-{# >Confirmer votre email</a>
-</p>{% endblock %}  #}
+	<div class="container">
+		<h2>confirmation e-mail</h2>
+		<div class="corps-email">Merci beaucoup de vous être inscrit!
+			<p>Pour finaliser votre inscription, veuillez cliquer sur le bouton ci-dessous afin de confirmer votre adresse e-mail. 
+				  Nous sommes ravis de vous accueillir parmi nous !"</p>
+		</div>
+		<a href="{{ confirmation_link }}" class="button">Confirmer votre adresse e-mail</a>
+		<p>Si vous n'avez pas créé de compte, veuillez ignorer cet e-mail.</p>
+	</div>
+
+
+{% endblock %}
