--- a/template/security/forgotPassword.html.twig
+++ b/template/security/forgotPassword.html.twig
@@ -1,13 +1,13 @@
 {% extends 'base.html.twig' %}
-{% block js %}
+{# {% block js %}
 	{{parent()}}
 	<script src="../js/password.js"></script>
-{% endblock %}
+{% endblock %} #}
 {% block body %}
 
 				<p>Entrez votre adresse e-mail ci-dessous pour réinitialiser votre mot de passe :</p>
 
-				<form action="/reset-password" method="post">
+				<form action="/resetPassword" method="post">
 					<div>
 						<label for="email">Adresse e-mail :</label>
 						<input type="email" id="mail" name="mail" required>
@@ -18,5 +18,5 @@
 				</form>
 		
 		{% endblock %}
-	</body>
-</html>
+	
+
