--- a/template/security/login.html.twig
+++ b/template/security/login.html.twig
@@ -16,7 +16,9 @@
 			<button type="submit" name="submit" value="Se connecter" class="btn btn-primary btn-block">Se connecter</button>
 		</form>
 		<hr>
-		<div class="forgot-password">Mot de passe oublié?</div>
+		<a class="forgot-password" href="/forgotPassword">Mot de passe oublié?</a>
+		
+            </div>
 	</div>
 
 {% endblock %}
