--- a/template/security/forgotPassword.html.twig
+++ b/template/security/forgotPassword.html.twig
@@ -5,18 +5,16 @@
 {% endblock %} #}
 {% block body %}
 
-				<p>Entrez votre adresse e-mail ci-dessous pour réinitialiser votre mot de passe :</p>
+	<p>Entrez votre adresse e-mail ci-dessous pour réinitialiser votre mot de passe :</p>
+	<form action="/forgotPassword" method="post">
+		<div>
+			<label for="mail">Adresse e-mail :</label>
+			<input type="email" id="mail" name="mail" required>
+		</div>
+		<div>
+			<button type="submit" name="submit" value="Reinitialiser le mot de passe">Réinitialiser le mot de passe</button>
+		</div>
+	</form>
 
-				<form action="/resetPassword" method="post">
-					<div>
-						<label for="email">Adresse e-mail :</label>
-						<input type="email" id="mail" name="mail" required>
-					</div>
-					<div>
-						<button type="submit">Réinitialiser le mot de passe</button>
-					</div>
-				</form>
-		
-		{% endblock %}
-	
 
+{% endblock %}
