--- a/template/security/resetPassword.html.twig
+++ b/template/security/resetPassword.html.twig
@@ -2,6 +2,6 @@
 {% block body %}
     <h1>Réinitialisation du mot de passe</h1>
     <p>Cliquez sur le lien ci-dessous pour réinitialiser votre mot de passe :</p>
-    <a href="/resetPassword/{{ reset_link }}">Réinitialiser le mot de passe</a>
+    <a href="{{ reset_link }}"class="button">Réinitialiser le mot de passe</a>
 
 {% endblock %}
