--- a/public/css/style.css
+++ b/public/css/style.css
@@ -328,7 +328,40 @@ a {
 .forgot-password {
     margin-top: 10px;
 }
+/* style du form "new password */
+.form-container {
+    max-width: 400px;
+    margin: 20px auto;
+}
 
+label {
+    font-size: 16px;
+    margin-bottom: 8px;
+    color: #555;
+}
+
+input {
+    width: 100%;
+    padding: 10px;
+    margin-bottom: 16px;
+    box-sizing: border-box;
+    border: 1px solid #ccc;
+    border-radius: 4px;
+}
+
+.button-mdp {
+    background-color: #af4c99;
+    color: white;
+    padding: 12px 20px;
+    border: none;
+    border-radius: 4px;
+    cursor: pointer;
+    font-size: 16px;
+}
+
+button:hover {
+    background-color: rgb(166, 166, 242);
+}
 /* style pour articles et commentaires */
 
 
