--- a/template/security/resetPassword.html.twig
+++ b/template/security/resetPassword.html.twig
@@ -1,6 +1,6 @@
-
+{# corps du mail #}
 {% block body %}
-    <h1>Réinitialisation du mot de passe</h1>
+    <h1>Réinitialisation du mot de passe </h1>
     <p>Cliquez sur le lien ci-dessous pour réinitialiser votre mot de passe :</p>
     <a href="{{ reset_link }}"class="button">Réinitialiser le mot de passe</a>
 
