mise en place du tableau index pour articles

--- a/template/base.html.twig
+++ b/template/base.html.twig
@@ -5,9 +5,11 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 		<meta name="description" content="">
 		<meta name="author" content="">
+		{% block style %}
 		<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css">
-		<link rel="stylesheet" type="text/css" href="/css/style.css ">
-
+		<link rel="stylesheet" type="text/css" href="/css/normalize.css">
+		<link rel="stylesheet" type="text/css" href="/css/style.css">
+		{% endblock %}
 	</head>
 
 	<body>
@@ -50,82 +52,83 @@
 				<li class="nav-item contact">
 					<a class="nav-link" href="#rs">Me contacter</a>
 				</li>
-				<li class="nav-item connexion">
-					<a class="nav-link " href="/user/login">Connexion</a>
 
-				</li>
-				<li>
-					<a class="nav-link sign-in " href="/register">S'inscrire</a>
-				</li>
-				<li>
-					<a class="nav-link logout " href="/deconnexion">déconnexion</a>
-				</li>
-			</ul>
-		</div>
-		{# Utilisation de session.flash #}
-
-
- {% if session.flash %}
-    {% for message in session.flash %}
-        <div class="flash-message error success {{ message.type }}">
-            {{ message.message }}
-        </div>
-    {% endfor %}
-{% endif %} 
-
-		{% block body %}{% endblock %}
-
-
-		<footer>
-			<div class="footer-content">
-				<div class="social-icons">
+				{% if userLoggedIn %}
 					<li>
-						<a href="ludivinezarkos@gmail.com">Contactez Moi</a>
-
+						<a class="nav-link logout" href="/deconnexion">Déconnexion</a>
 					</li>
-					<a href="#" class="social-icon">
-						<i class="fas fa-solid fa-envelope"></i>
-					</a>
-					<a href="#" class="social-icon">
-						<i class="fab fa-facebook"></i>
-					</a>
-					<a href="#" class="social-icon">
-						<i class="fab fa-twitter"></i>
-					</a>
-					<a href="#" class="social-icon">
-						<i class="fab fa-linkedin"></i>
-					</a>
-					<a href="https://github.com/LudGold" target="_blank">
-						<i class="fab fa-github"></i>
-					</a>
+				{% else %}
+					<li class="nav-item connexion">
+						<a class="nav-link login" href="/login">Connexion</a>
+					</li>
+					<li>
+						<a class="nav-link sign-in" href="/register">S'inscrire</a>
+					</li>
+				{% endif %}
+			</div>
+			{# Utilisation de session.flash #}
+			{% if flashMessages %}
+				{% for message in flashMessages %}
+					<div class="flash-message {{ message.type }}">
+						{{ message.message }}
+					</div>
+				{% endfor %}
+			{% endif %}
 
+
+			{% block body %}{% endblock %}
+
+
+			<footer>
+				<div class="footer-content">
+					<div class="social-icons">
+						<li>
+							<a href="ludivinezarkos@gmail.com">Contactez Moi</a>
+
+						</li>
+						<a href="#" class="social-icon">
+							<i class="fas fa-solid fa-envelope"></i>
+						</a>
+						<a href="#" class="social-icon">
+							<i class="fab fa-facebook"></i>
+						</a>
+						<a href="#" class="social-icon">
+							<i class="fab fa-twitter"></i>
+						</a>
+						<a href="#" class="social-icon">
+							<i class="fab fa-linkedin"></i>
+						</a>
+						<a href="https://github.com/LudGold" target="_blank">
+							<i class="fab fa-github"></i>
+						</a>
+
+					</div>
+
+					<ul class="footer-links">
+						<li>
+							<a href="#" class="confidential">Politique de confidentialité</a>
+						</li>
+						<li>
+							<a href="#" class="credit">Credits</a>
+						</li>
+
+					</ul>
 				</div>
 
-				<ul class="footer-links">
-					<li>
-						<a href="#" class="confidential">Politique de confidentialité</a>
-					</li>
-					<li>
-						<a href="#" class="credit">Credits</a>
-					</li>
+				<div class="footer-bottom">
+					<p>&copy;
+						<span id="current-year">2023</span>
+						LudGold. All Rights Reserved.</p>
 
-				</ul>
-			</div>
-
-			<div class="footer-bottom">
-				<p>&copy;
-					<span id="current-year">2023</span>
-					LudGold. All Rights Reserved.</p>
-
-				<div class="footer-administration">
-					<li>
-						<a href="#">Admin</a>
-					</li>
+					<div class="footer-administration">
+						<li>
+							<a href="#">Admin</a>
+						</li>
+					</div>
 				</div>
-			</div>
-		</footer>
+			</footer>
 
-		{% block js %}{% endblock %}
+			{% block js %}{% endblock %}
+		</body>
 	</body>
-
 </html>
