--- a/template/security/login.html.twig
+++ b/template/security/login.html.twig
@@ -4,7 +4,7 @@
 
 	<div id="login">
 		<h2>Connexion</h2>
-		<form action="/user/login" method="post">
+		<form action="/login" method="post">
 			<div class="form-group">
 				<label for="mail">votre adresse e-mail</label>
 				<input type="text" name="mail" id="mail" class="form-control" required>
