--- a/template/security/register.html.twig
+++ b/template/security/register.html.twig
@@ -32,7 +32,7 @@
             </form>
             <hr>
             <div class="alternative_txt">
-                <a class="small" href="/user/login">Vous avez déjà un compte ? Connectez-vous !</a>
+                <a class="small" href="/login">Vous avez déjà un compte ? Connectez-vous !</a>
             </div>
         </div>
     </div>
