articles-index-liste-mise-en-place

--- a/template/admin/article/_form.html.twig
+++ b/template/admin/article/_form.html.twig
@@ -1,5 +1,7 @@
+<form action="/articles" method="post"> 
+	<input type="text" name="field1" value="{{ article.title|default('') }}">
+	<input type="text" name="field2" value="{{ article.updateDate|default('') }}">
+    <input type="text" name="field3" value="{{ article.chapo|default('') }}">
+    
 
-
-
-<input type="text" name="field1" value="{{ article.title|default('') }}">
-<input type="text" name="field2" value="{{ article.chapo|default('') }}">
+</form>
