--- a/template/article/index.html.twig
+++ b/template/article/index.html.twig
@@ -4,13 +4,10 @@
 <table id="article_table" class="display">
     <thead>
         <tr>
-            <th>UserName</th>
-            <th>Title</th>
-            <th>Date</th>
-            <th>Résumé</th>
-            <th>Statut</th>
-            <th>Date de Modification</th>
-
+            <th>Titre</th>
+				<th>Date de Modification</th>
+				<th>Chapo</th>
+				<th><a href="/article', {'id': article.id}">Lien vers l'article</a></th>
 
         </tr>
     </thead>
@@ -24,6 +21,7 @@
             <td>Row 2 Data 1</td>
             <td>Row 2 Data 2</td>
         </tr>
+
     </tbody>
 </table>
 
