--- a/template/admin/article/index.html.twig
+++ b/template/admin/article/index.html.twig
@@ -1,52 +1,42 @@
 {% extends 'base.html.twig' %}
-{# on prends les blocs de style de et de base.html.twig #}
+{# on prend les blocs de style de et de base.html.twig #}
 {% block style %}
-{{ parent() }}
+	{{ parent() }}
 	<link rel="stylesheet" href="https://cdn.datatables.net/1.13.7/css/jquery.dataTables.css"/>
 {% endblock %}
 {% block body %}
-<table id="article_table">
-<thead>
-        <tr>
-            <th>UserName</th>
-            <th>Title</th>
-            <th>Date</th>
-            <th>Résumé</th>
-            <th>Statut</th>
-            <th>Date de Modification</th>
-        </tr>
-    </thead>
-</table>
+	<table id="article_table" class="display">
+		<thead>
+			<tr>
+				<th>Titre</th>
+				<th>Date de Modification</th>
+				<th>Chapo</th>
+				<th>Action</th>
+			</tr>
+		</thead>
+		<tbody>
+			{% for article in articles|sort %}
+				<tr>
+					<td>{{ article.title }}</td>
+					<td>{{ article.updateDate }}</td>
+					<td>{{ article.chapo }}</td>
+					<td>
+						<a href="/article/{{article.id}}" target="_blank">Lien vers l'article</a>
+						<a href="#">
+							<i class="fas fa-pencil-alt"></i>
+						</a>
+						<a href='#' onclick="return confirm('Êtes-vous sûr de vouloir supprimer cet article ?')">
+							<i class="fas fa-trash"></i>
+						</a>
+					</td>
+				</tr>
+			{% endfor %}
+		</tbody>
+	</table>
 {% endblock %}
 {% block js %}
 	{{ parent() }}
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.7.1/jquery.min.js" integrity="sha512-v2CJ7UaYy4JwqLDIrZUI/4hqeoQieOmAZNXBeQyjo21dadnwR+8ZaIJVT8EE2iyI61OV8e6M8PP2/4hpQINQ/g==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
 	<script src="https://cdn.datatables.net/1.13.7/js/jquery.dataTables.js"></script>
-<script>
-//id du tableau de l'index #example
-$('#article_table').DataTable( {
-    language: {
-        processing:     "Traitement en cours...",
-        search:         "Rechercher&nbsp;:",
-        lengthMenu:    "Afficher _MENU_ &eacute;l&eacute;ments",
-        info:           "Affichage de l'&eacute;lement _START_ &agrave; _END_ sur _TOTAL_ &eacute;l&eacute;ments",
-        infoEmpty:      "Affichage de l'&eacute;lement 0 &agrave; 0 sur 0 &eacute;l&eacute;ments",
-        infoFiltered:   "(filtr&eacute; de _MAX_ &eacute;l&eacute;ments au total)",
-        infoPostFix:    "",
-        loadingRecords: "Chargement en cours...",
-        zeroRecords:    "Aucun &eacute;l&eacute;ment &agrave; afficher",
-        emptyTable:     "Aucune donnée disponible dans le tableau",
-        paginate: {
-            first:      "Premier",
-            previous:   "Pr&eacute;c&eacute;dent",
-            next:       "Suivant",
-            last:       "Dernier"
-        },
-        aria: {
-            sortAscending:  ": activer pour trier la colonne par ordre croissant",
-            sortDescending: ": activer pour trier la colonne par ordre décroissant"
-        }
-    }
-} );
-</script> 
+	<script src="../js/datatable_init.js"></script>
 {% endblock %}
