add article functionnality

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -170,6 +170,43 @@ a {
     margin: 0 auto;
     box-shadow: 0 0 10px rgba(0, 0, 0, 0.2);
 }
+/*style pour nouvel article form*/
+.new-article {
+    width: 30%;
+    margin: auto;
+    padding: 20px;
+    border: 1px solid #ccc;
+    border-radius: 5px;
+    box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+}
+
+.new-article label {
+    display: block;
+    margin-bottom: 8px;
+}
+
+.new-article input {
+    width: 100%;
+    padding: 8px;
+    margin-bottom: 12px;
+    box-sizing: border-box;
+}
+
+.new-article input[type="submit"] {
+    width: auto;
+    padding: 10px 20px;
+    background-color: #4CAF50;
+    color: #fff;
+    border: none;
+    border-radius: 3px;
+    cursor: pointer;
+    font-size: 16px;
+}
+
+.new-article input[type="submit"]:hover {
+    background-color: #45a049;
+}
+
 
 /* style pour page reach me */
 .contact-container {
