--- a/template/admin/article/index.html.twig
+++ b/template/admin/article/index.html.twig
@@ -25,7 +25,7 @@
 						<a href="#">
 							<i class="fas fa-pencil-alt"></i>
 						</a>
-						<a href='#' onclick="return confirm('Êtes-vous sûr de vouloir supprimer cet article ?')">
+						<a href='/admin/deleteArticle/{{ article.id }}' onclick="return confirm('Êtes-vous sûr de vouloir supprimer cet article ?')">
 							<i class="fas fa-trash"></i>
 						</a>
 					</td>
