--- a/template/admin/article/index.html.twig
+++ b/template/admin/article/index.html.twig
@@ -22,9 +22,10 @@
 					<td>{{ article.chapo }}</td>
 					<td>
 						<a href="/article/{{article.id}}" target="_blank">Lien vers l'article</a>
-						<a href="#">
+						<a href="/admin/changeArticle/{{ article.id }}">
 							<i class="fas fa-pencil-alt"></i>
 						</a>
+
 						<a href='/admin/deleteArticle/{{ article.id }}' onclick="return confirm('Êtes-vous sûr de vouloir supprimer cet article ?')">
 							<i class="fas fa-trash"></i>
 						</a>
